--- a/package.json
+++ b/package.json
@@ -3,15 +3,6 @@
   "version": "1.0.0",
   "description": "js-mysql === JavaScriptでDBからデータを取得する",
   "main": "index.js",
-  "dependencies": {
-    "dotenv": "^7.0.0",
-    "express": "^4.16.4",
-    "express-generator": "^4.16.0",
-    "mysql": "^2.16.0",
-    "request": "^2.88.0",
-    "require": "^2.4.20"
-  },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/kakke18/js-mysql/issues"
   },
-  "homepage": "https://github.com/kakke18/js-mysql#readme"
+  "homepage": "https://github.com/kakke18/js-mysql#readme",
+  "dependencies": {
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "mysql": "^2.16.0"
+  }
 }
